# YAMPM

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1877cqc9297qjcylabi6s7jv3jd4b1jp-source  lpip9y60x8sghsgvdadcyldw8nvvjx59-source
src/: main.rs  repl.rs
src/config/: mod.rs
src/curseforge/: mod.rs
src/launchers/: mod.rs
src/sources/: mod.rs  modrinth.rs
src/sources/modrinth/: mod.rs
src/sources/modrinth/project/: enums.rs  mod.rs  structs.rs
