[package]
rust-version = "1.84.0"
edition = "2021"
publish = false

name = "yampm"
version = "0.1.0"
description = "Yet Another Modpack Manager"
repository = "github.com/ShiningTrapezohedronStudio/YAMPM"
authors = ["Sophia Bitterstar <sophia@shiningtrapezohedron.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

keywords = ["minecraft", "modpack", "curseforge", "modrinth", "modpack manager"]
categories = ["games", "games::tools", "development::build-tools"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "CHANGELOG.md"]

[dependencies]
clap = "4.5.41"
directories = "6.0.0"
rustyline = "16.0.0"

# fasthash = "0.4.0"
# petgraph = "0.8.2"
# reqwest = { version = "0.12.22", features = ["json"] }
# tokio = { version = "1.46.1", features = ["full"] }

[dependencies.config]
version = "0.15.13"
default-features = false
features = ["toml", "ron"]

[dependencies.reqwest]
version = "0.12.22"
features = ["json"]

[dependencies.serde]
version =  "1"
features = ["derive"]

[dependencies.tokio]
version = "1.46.1"
features = ["full"]

[lints.rust]
missing_docs = "allow"

dead_code = "warn"
unused = "warn"

# Causes issues with Serde Proc Macro
non_camel_case_types = "warn"
non_upper_case_globals = "warn"

non_snake_case = "forbid"
unreachable_code = "forbid"
unsafe_code = "forbid"
unused_lifetimes = "forbid"
unused_variables = "forbid"
unused_assignments = "forbid"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = 10 }
suspicious = { level = "deny", priority = 20 }
style = { level = "deny", priority = 30 }
complexity = { level = "deny", priority = 40 }
perf = { level = "deny", priority = 50 }
pedantic = { level = "deny", priority = 60 }
cargo = { level = "deny", priority = 70 }

[profile.release]
opt-level = 3
codegen-units = 1
strip = "debuginfo"
lto = "thin"
